[gd_scene load_steps=8 format=2]

[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=4]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -140.0
margin_right = 140.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreMaxLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -27.0
margin_top = -15.0
margin_right = 27.0
custom_fonts/font = SubResource( 2 )
text = "Record: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -48.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "v1.0.0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -309.0
margin_top = -79.5
margin_right = 309.0
margin_bottom = 79.5
custom_fonts/font = SubResource( 1 )
text = "Dodge the Creeps!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -105.0
margin_top = -200.0
margin_right = 105.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 5 )
text = "Jouer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 136.0
margin_top = 632.0
margin_right = 345.0
margin_bottom = 672.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 13.0
margin_right = 63.0
margin_bottom = 27.0
text = "Musique :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="HBoxContainer"]
margin_left = 67.0
margin_right = 209.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -25.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="value_changed" from="HBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
